# fastrlap-release

./: LICENSE  README.md
fastrlap-mujoco-env/: .gitignore  README.md  data_collect.py  install.sh  requirements.txt  train_online_pixels.py  train_online_states.py
fastrlap-mujoco-env/configs/: drq_config.py  redq_config.py
fastrlap-mujoco-env/offroad_sim_v2/: convert_heightmap.py  hindsight.py  obstacle.py  run_policy.py
fastrlap-mujoco-env/offroad_sim_v2/envs/: __init__.py  car.py  goal_graph.py  heightfield_arena.py  heightfield_arena.xml  task.py  utils.py  wrappers.py
fastrlap-mujoco-env/offroad_sim_v2/envs/models/: block.xml  one_car.xml  seven_cars.xml  sphere.xml  two_cars.xml
fastrlap-mujoco-env/offroad_sim_v2/envs/models/cars/: base_car.template  make_car_model.py  pusher_car.template
fastrlap-mujoco-env/offroad_sim_v2/envs/models/cars/base_car/: buddy.xml  car1.xml  car2.xml  car3.xml  car4.xml  car5.xml  goose.xml
fastrlap-mujoco-env/offroad_sim_v2/envs/models/cars/meshes/: mushr_base_collision_nano.stl  mushr_base_collision_tx2.stl  mushr_wheel.stl  mushr_wheel_collision.stl  mushr_ydlidar.stl  mushr_ydlidar_collision.stl
fastrlap-mujoco-env/offroad_sim_v2/envs/models/cars/pusher_car/: buddy.xml  car1.xml  car2.xml  car3.xml  car4.xml  car5.xml  goose.xml
fastrlap-ros/: README.md
fastrlap-ros/offroad/: CMakeLists.txt  package.xml
fastrlap-ros/offroad_gazebo/: CMakeLists.txt  package.xml
fastrlap-ros/offroad_gazebo/launch/: jackal_autorally_track.launch  jackal_builtin_track.launch  jackal_description.launch  spawn_custom_jackal.launch
fastrlap-ros/offroad_gazebo/urdf/: jackal_custom.urdf.xacro
fastrlap-ros/offroad_gazebo/urdf/config/: base
fastrlap-ros/offroad_learning/: CMakeLists.txt  package.xml  setup.py
fastrlap-ros/offroad_learning/config/: drq_config.py  iql_config.py  pixel_iql_config.py  redq_config.py
fastrlap-ros/offroad_learning/launch/: inference.launch  real_inference.launch  real_inference_indoors.launch  sim_record_goal_graph.launch  sim_training_inference.launch  training.launch
fastrlap-ros/offroad_learning/src/offroad_learning/: env.py  record_goal_graph.py  training.py
fastrlap-ros/offroad_learning/src/offroad_learning/inference/: __init__.py  aggregator.py  goal_graph.py  inference_agent.py  state_machine.py
fastrlap-ros/offroad_sensor_fusion/: CMakeLists.txt  package.xml  setup.py
fastrlap-ros/offroad_sensor_fusion/launch/: gps_state_estimator.launch
fastrlap-ros/offroad_sensor_fusion/src/offroad_sensor_fusion/: gps_state_estimator_node.py
fastrlap-ros/tensor_dict_convert/: CMakeLists.txt  package.xml  setup.py
fastrlap-ros/tensor_dict_convert/src/: tensor_dict_convert.py
fastrlap-ros/tensor_dict_msgs/: CMakeLists.txt  package.xml
fastrlap-ros/tensor_dict_msgs/msg/: Tensor.msg  TensorDict.msg
jaxrl5/: LICENSE  requirements.txt  requirements_test.txt
jaxrl5/jaxrl5/: evaluation.py
jaxrl5/jaxrl5/agents/: __init__.py  agent.py
jaxrl5/jaxrl5/agents/drq/: drq_learner.py
jaxrl5/jaxrl5/agents/iql/: iql_learner.py
jaxrl5/jaxrl5/agents/pixel_iql/: pixel_iql_learner.py
jaxrl5/jaxrl5/agents/sac/: sac_learner.py
jaxrl5/jaxrl5/data/: __init__.py  d4rl_datasets.py  memory_efficient_replay_buffer.py  replay_buffer.py
jaxrl5/jaxrl5/distributions/: __init__.py  tanh_normal.py  tanh_transformed.py
jaxrl5/jaxrl5/networks/: __init__.py  ensemble.py  mlp.py  pixel_multiplexer.py  state_action_value.py  state_value.py
jaxrl5/jaxrl5/networks/encoders/: ln_resnet_encoder.py
jaxrl5/jaxrl5/wrappers/: pixels.py
