<?xml version="1.0"?>
<package format="2">
  <name>offroad</name>
  <version>0.0.0</version>
  <description>The offroad package</description>

  <maintainer email="kstachowicz@berkeley.edu">Kyle Stachowicz</maintainer>
  <author email="kstachowicz@berkeley.edu">Kyle Stachowicz</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>offroad_gazebo</depend>
  <depend>offroad_learning</depend>
  <depend>offroad_sensor_fusion</depend>
  <depend>tensor_dict_convert</depend>
  <depend>tensor_dict_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
