<?xml version="1.0"?>
<package format="2">
  <name>offroad_gazebo</name>
  <version>0.0.0</version>
  <description>The offroad_gazebo package</description>

  <maintainer email="kstachowicz@berkeley.edu">Kyle Stachowicz</maintainer>
  <author email="kstachowicz@berkeley.edu">Kyle Stachowicz</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>hector_gazebo_plugins</exec_depend>
  <exec_depend>hector_gazebo_worlds</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>jackal_gazebo</exec_depend>
  <exec_depend>jackal_gazebo</exec_depend>
  <exec_depend>realsense_ros_gazebo</exec_depend>
</package>
