<?xml version="1.0"?>
<package format="2">
  <name>tensor_dict_msgs</name>
  <version>0.0.0</version>
  <description>The tensor_dict_msgs package</description>

  <maintainer email="kstachowicz@berkeley.edu">Kyle Stachowicz</maintainer>
  <author email="kstachowicz@berkeley.edu">Kyle Stachowicz</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>rospy</depend>
</package>
